# gnu_serveez

./: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  GNUmakefile  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-Win32  README-alpha  README-cross  RELEASE  THANKS  TODO  acinclude.m4  autodsp  autogen.sh  config.h.in  config.h.serveez  config.h.sizzle  configure  configure.ac  configure.in  debian.sh.in  libsizzle.dsp  mkinstalldirs  redhat.sh.in  serveez.ap  serveez.dsp  serveez.dsw  vcgen.bat  version.h.serveez  version.h.sizzle
build-aux/: autodsp  common.mk  debian.sh.in  fake-soelim.in  redhat.sh.in  vcgen.bat
build-aux/guile-baux/: s3as
data/: ChangeLog  Makefile.am  PLATFORMS  guile-projects.txt  hello-cgi.scm  init.serveez.in  libtool-MacOS.diff  serveez.cfg
doc/: ChangeLog  Makefile.am  Makefile.in  awcs-proto.txt  blurb.texi  coserver.txt  gnu-serveez.html  guile-api.texh  guile-api.texi.in  guile-boot.texh  index.html  mb-tail  mdate-sh  port.lst  serveez-api.awk  serveez-api.texh  serveez-api.texi  serveez-api.texi.in  serveez-config.1  serveez-config.1in  serveez-doc-snarf.awk  serveez.1  serveez.1in  serveez.cfg  serveez.en.html  serveez.texi  server.txt
m4/: inc.m4
src/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  action.h  alist.c  alist.h  alloc.c  alloc.h  cfgfile.c  cfgfile.h  changedir.h  connect.c  connect.h  cpp-tricks.h  dynload.c  dynload.h  echo-server.scm  eval-server.scm  gi.c  gi.h  gsk-make  guile-api.c  guile-api.h  guile-bin.c  guile-bin.h  guile-boot.scm  guile-missing.h.in  guile-server.c  guile-server.h  guile.c  guile.h  hash.c  hash.h  icmp-socket.c  icmp-socket.h  interface.c  interface.h  internal.h  le-u32-hash.h  (+47 more)
src/awcs-server/: Makefile.am  Makefile.in  awcs-proto.c  awcs-proto.h
src/ctrl-server/: Makefile.am  Makefile.in  control-proto.c  control-proto.h
src/fakeident-server/: Makefile.am  ident-proto.c  ident-proto.h
src/foo-server/: Makefile.am  Makefile.in  foo-proto.c  foo-proto.h
src/guile-server/: ChangeLog  Makefile.am  echo-server.scm  eval-server.scm  icecast-server.scm  inetd.scm  mandel-client.scm  mandel-server.scm  mandel-shared.scm
src/http-server/: Makefile.am  Makefile.in  http-cache.c  http-cache.h  http-cgi.c  http-cgi.h  http-core.c  http-core.h  http-dirlist.c  http-dirlist.h  http-proto.c  http-proto.h
src/irc-core/: Makefile.am  Makefile.in  irc-core.c  irc-core.h
src/irc-server/: Makefile.am  Makefile.in  irc-config.c  irc-config.h  irc-crypt.c  irc-crypt.h  irc-event-1.c  irc-event-2.c  irc-event-3.c  irc-event-4.c  irc-event-5.c  irc-event-6.c  irc-event-7.c  irc-event.h  irc-proto.c  irc-proto.h  irc-server.c  irc-server.h
src/libserveez/: API-HACKING  ChangeLog  Makefile.am  address.c  address.h  alist.c  alist.h  alloc.c  alloc.h  array.c  array.h  asprintf.c  asprintf.h  binding.c  binding.h  boot.c  boot.h  cfg.c  cfg.h  common.mk  core.c  core.h  defines.h  dynload.c  dynload.h  hash.c  hash.h  icmp-socket.c  icmp-socket.h  interface.c  interface.h  ipdata.h  iphlpapi.h  libserveez.ap  libserveez.dsp  mutex.c  mutex.h  passthrough.c  passthrough.h  pipe-socket.c  (+33 more)
src/libserveez/codec/: Makefile.am  bzip2.c  bzip2.h  codec.c  codec.h  gzlib.c  gzlib.h
src/libserveez/coserver/: Makefile.am  coserver.c  coserver.h  dns.c  dns.h  ident.c  ident.h  reverse-dns.c  reverse-dns.h  xerror.c  xerror.h
src/nut-server/: Makefile.am  gnutella.c  gnutella.h  nut-core.c  nut-core.h  nut-hostlist.c  nut-hostlist.h  nut-request.c  nut-request.h  nut-route.c  nut-route.h  nut-transfer.c  nut-transfer.h
src/prog-server/: Makefile.am  prog-server.c  prog-server.h
src/sntp-server/: Makefile.am  sntp-proto.c  sntp-proto.h
src/tunnel-server/: Makefile.am  tunnel.c  tunnel.h
test/: ChangeLog  Makefile.am  alist-test.c  alist.dsp  array-test.c  array.ap  array.dsp  binary-test.scm  btdt.ap  btdt.c  codec-test.c  codec.ap  codec.dsp  common  guile-server-test.scm  hash-test.c  hash.ap  hash.dsp  prog-test.c  prog-test.cfg  prog.ap  server-test.scm  spvec-test.c  spvec.ap  spvec.dsp  t000  t001  t002  t003  t004  t005  t006  t007  t008  test-suite.scm  test.c  test.h  vector-test.c  vector.ap  vector.dsp
zzz/: 000README  2011-02-15.‘sscanf’ in parsing irc server config  2011-02-28.locked vs unlocked stdio  2013-04-27.‘svz_socket_t.data’ disambiguation
